# GSLInterp

./: CHANGES  GSLInterp.cabal  GSLInterp.hs  Makefile  README.md  TODO  Test.hs  gsl_interp.c
Math/: GSLInterp.hs
c_lib/: gsl_interp.c
csrc/: gsl_interp.c
src/Math/: GSLInterp.hs
tests/: Test.hs
