name:                GSLInterp
version:             0.1.0.0
synopsis:            Haskell interface to GSL interpolation routines
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Scott French
maintainer:          scott.w.french@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Math.GSLInterp
  build-depends:       base ==4.5.*, vector ==0.10.*
  c-sources:           csrc/gsl_interp.c
  extra-libraries:     gsl

Test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: tests
  build-depends:  base ==4.5.*, vector ==0.10.*, HUnit ==1.2.*, GSLInterp

